classDiagram
  class Produto {
    - nome: String
    - preco: double
  }

  interface Desconto {
    +double aplicar(Pedido)
  }

  class DescontoClienteFiel
  class DescontoPromocional

  class Pedido {
    - itens: List~PedidoItem~
    - desconto: Desconto
  }

  class PedidoItem {
    - produto: Produto
    - quantidade: int
  }

  Desconto <|-- DescontoClienteFiel
  Desconto <|-- DescontoPromocional
  Pedido ..> Desconto : usa
  Pedido "1" -- "*" PedidoItem
